# regorule-operator

./: .gitignore  CHANGELOG.md  Makefile  README.adoc  bors.toml  deny.toml
.github/ISSUE_TEMPLATE/: config.yml  new_version.md
.github/workflows/: build.yml  build_artifacts.yml  nightly.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
crd/: Cargo.toml
crd/src/: bla.rs  lib.rs
deploy/: DO_NOT_EDIT.md
deploy/crd/: regorule.crd.yaml
deploy/helm/regorule-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/regorule-operator/crds/: crds.yaml
deploy/helm/regorule-operator/templates/: roles.yaml  service.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  service.yaml  serviceaccount.yaml
docker/: Dockerfile
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc  installation.adoc  usage.adoc
examples/: simple-regorule-is-minute-even.yaml  simple-regorule-trino.yaml  simple-regorule.yaml  simple-regorule2.yaml
examples/service/: regorule-service.yaml
operator/: Cargo.toml
operator/src/: error.rs  lib.rs
packaging/debian/: stackable-regorule-operator.service
packaging/rpm/SOURCES/stackable-regorule-operator-VERSION/usr/lib/systemd/system/: stackable-regorule-operator.service
packaging/rpm/SPECS/: stackable-regorule-operator.spec
rust/crd/: Cargo.toml
rust/crd/src/: lib.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: controller.rs  main.rs  stackable-regorule-operator.rs
rust/operator/src/: error.rs  lib.rs
scripts/: generate-manifests.sh
server/: Cargo.toml  build.rs
server/packaging/debian/: service
server/packaging/rpm/SOURCES/stackable-regorule-operator-server-VERSION/usr/lib/systemd/system/: stackable-regorule-operator-server.service  stackable-zookeeper-operator-server.service
server/src/: config.rs  main.rs
