[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Contains the RegoRule CRD structs and utilities"
edition = "2018"
license = "OSL-3.0"
name = "stackable-regorule-crd"
version = "0.1.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "adapt_to_product_config_interface" }

k8s-openapi = { version = "0.12", default-features = false }
kube = { version = "0.57", default-features = false, features = ["jsonpatch", "derive"] }
kube-runtime = "0.57"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
