[package]
name = "stackable-regorule-operator"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"
description = "Kubernetes Operator library to deal with RegoRule custom resources"
license = "OSL-3.0"

[dependencies]
stackable-regorule-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

async-trait = "0.1"
flate2 = "1"
futures = "0.3"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false }
kube-runtime = "0.52"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "1"
tokio = "1"
tracing = "0.1"
warp = "0.3"

[dev-dependencies]
rstest = "0.7"
