[package]
name = "stackable-regorule-operator-server"
description = "Stackable RegoRule Operator"
version = "0.1.0-nightly"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-regorule-crd = { path = "../crd" }
stackable-regorule-operator = { path = "../operator" }

anyhow = "1"
serde_yaml = "0.8"
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-regorule-operator-server", "opt/stackable/regorule-operator/", "755"],
]
