[package]
name = "stackable-regorule-operator-server"
description = "Stackable RegoRule Operator"
version = "0.1.0-nightly"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"
license = "OSL-3.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-regorule-crd = { path = "../crd" }
stackable-regorule-operator = { path = "../operator" }
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }

anyhow = "1.0"
schemars = "0.8"
serde_yaml = "0.8"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-regorule-operator-server", "opt/stackable/regorule-operator/", "755"],
]
