[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable RegoRule Operator"
edition = "2018"
license = "OSL-3.0"
name = "stackable-regorule-operator-server"
repository = "https://github.com/stackabletech/regorule-operator"
version = "0.1.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-regorule-crd = { path = "../crd" }
stackable-regorule-operator = { path = "../operator" }
stackable_config = { git = "https://github.com/stackabletech/common.git", branch = "main" }

anyhow = "1.0"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
schemars = "0.8"
serde_yaml = "0.8"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-regorule-operator-server", "opt/stackable/regorule-operator/", "755"],
]
