[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the RegoRule CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-regorule-crd"
repository = "https://github.com/stackabletech/regorule-operator"
version = "0.7.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.9.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
