[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for OpenPolicyAgent Rego rules - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-regorule-operator"
repository = "https://github.com/stackabletech/regorule-operator"
version = "0.2.0-nightly"

[dependencies]
stackable-regorule-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.2.2" }

async-trait = "0.1"
flate2 = "1.0"
futures = "0.3"
k8s-openapi = { version = "0.13", default-features = false }
kube-runtime = "0.60.0"
kube = { version = "0.60", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "1.0"
tokio = "1.12"
tracing = "0.1"
warp = "0.3"

[dev-dependencies]
rstest = "0.11"
